@@ -497,18 +497,48 @@ attr SQL_DESC_SCALE 0
 #attr SQL_DESC_DISPLAY_SIZE 8000
 attr SQL_DESC_TYPE_NAME sql_variant
 
+set DESC_PRECISION 2
+set DESC_SCALE 2
+select time(4) '12:34:56'
+attr SQL_DESC_SCALE 4
+attr SQL_DESC_PRECISION 4
+attr SQL_DESC_CONCISE_TYPE -154
+attr SQL_DESC_TYPE -154
 
+set DESC_PRECISION 2
+set DESC_SCALE 2
+select datetime2(4) '12:34:56'
+attr SQL_DESC_SCALE 4
+attr SQL_DESC_PRECISION 4
+attr SQL_DESC_CONCISE_TYPE SQL_TYPE_TIMESTAMP
+attr SQL_DESC_TYPE SQL_DATETIME
+
+set DESC_PRECISION 2
+set DESC_SCALE 2
+select datetimeoffset(4) '12:34:56'
+attr SQL_DESC_SCALE 4
+attr SQL_DESC_PRECISION 4
+attr SQL_DESC_CONCISE_TYPE -155
+attr SQL_DESC_TYPE -155
+
+set DESC_PRECISION 2
+set DESC_SCALE 2
+select date '2011-08-06'
+attr SQL_DESC_SCALE 0
+attr SQL_DESC_PRECISION 0
+attr SQL_DESC_CONCISE_TYPE SQL_TYPE_DATE
+attr SQL_DESC_TYPE SQL_TYPE_DATE
 
 # some additional tests using ARD
 
 set DESC_CONCISE_TYPE SQL_NUMERIC
-set DESC_PRECISION 20
-set DESC_SCALE 4
+set DESC_PRECISION 4
+set DESC_SCALE 2
 
 set DESC_CONCISE_TYPE SQL_INTEGER
 attr DESC_TYPE SQL_INTEGER
-attr DESC_LENGTH 0
-attr DESC_PRECISION 0
-attr DESC_SCALE 0
+attr DESC_LENGTH 4
+attr DESC_PRECISION 4
+attr DESC_SCALE 2
 
 
