@@ -1,3 +1,8 @@
+Fri Aug 12 15:49:18 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/unittests/describecol.c:
+	* src/odbc/unittests/describecol.in:
+	- improve describecol test for ms date/time
+
 Fri Aug 12 15:33:59 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/odbc/unittests/data.c:
 	- check correct protocol for ms date/time -> binary tests
@@ -746,4 +751,4 @@ Sat Apr  9 16:15:00 EDT 2011	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.91 added because of release
 
 $FreeTDS$
-$Id: ChangeLog,v 1.3376 2011/08/12 13:33:44 freddy77 Exp $
+$Id: ChangeLog,v 1.3377 2011/08/12 13:49:54 freddy77 Exp $
